@@ -13,7 +13,8 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.index.IndexVersion;
 import org.mockito.Mockito;
 
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.elasticsearch.xpack.core.ilm.UnfollowAction.CCR_METADATA_KEY;
 import static org.hamcrest.Matchers.equalTo;
@@ -24,7 +25,7 @@ public class CloseFollowerIndexStepTests extends AbstractStepTestCase<CloseFollo
     private static IndexMetadata getIndexMetadata() {
         return IndexMetadata.builder("follower-index")
             .settings(settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "true"))
-            .putCustom(CCR_METADATA_KEY, Collections.emptyMap())
+            .putCustom(CCR_METADATA_KEY, Map.of())
             .numberOfShards(1)
             .numberOfReplicas(0)
             .build();
@@ -38,7 +39,7 @@ public class CloseFollowerIndexStepTests extends AbstractStepTestCase<CloseFollo
             assertThat(closeIndexRequest.indices()[0], equalTo("follower-index"));
             @SuppressWarnings("unchecked")
             ActionListener<CloseIndexResponse> listener = (ActionListener<CloseIndexResponse>) invocation.getArguments()[1];
-            listener.onResponse(new CloseIndexResponse(true, true, Collections.emptyList()));
+            listener.onResponse(new CloseIndexResponse(true, true, List.of()));
             return null;
         }).when(indicesClient).close(Mockito.any(), Mockito.any());
 
@@ -54,7 +55,7 @@ public class CloseFollowerIndexStepTests extends AbstractStepTestCase<CloseFollo
             assertThat(closeIndexRequest.indices()[0], equalTo("follower-index"));
             @SuppressWarnings("unchecked")
             ActionListener<CloseIndexResponse> listener = (ActionListener<CloseIndexResponse>) invocation.getArguments()[1];
-            listener.onResponse(new CloseIndexResponse(false, false, Collections.emptyList()));
+            listener.onResponse(new CloseIndexResponse(false, false, List.of()));
             return null;
         }).when(indicesClient).close(Mockito.any(), Mockito.any());
 
@@ -85,7 +86,7 @@ public class CloseFollowerIndexStepTests extends AbstractStepTestCase<CloseFollo
     public void testCloseFollowerIndexIsNoopForAlreadyClosedIndex() throws Exception {
         IndexMetadata indexMetadata = IndexMetadata.builder("follower-index")
             .settings(settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "true"))
-            .putCustom(CCR_METADATA_KEY, Collections.emptyMap())
+            .putCustom(CCR_METADATA_KEY, Map.of())
             .state(IndexMetadata.State.CLOSE)
             .numberOfShards(1)
             .numberOfReplicas(0)
